Update maven to copy final artifacts.